[CM2-1221] Fixed header on iphone 11

--- a/energylink-connect2-app/src/components/Menu/menu.scss
+++ b/energylink-connect2-app/src/components/Menu/menu.scss
@@ -9,4 +9,6 @@ $headerHeight: 60px;
   height: calc(100% - #{$headerHeight});
   background-color: $black;
   width: 100%;
+  margin-top: env(safe-area-inset-top);
+  padding-bottom: calc(4 * env(safe-area-inset-bottom));
 }
